# aarapsi_robot_pack

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
cfg/: README.md  campus_cfg.yaml  cantina_cfg.yaml  desktop_cfg.yaml  gardens_cfg.yaml  gtriangle_cfg.yaml  hdl_ekf.yaml  library_cfg.yaml  office_cfg.yaml  pipeline_config.yaml  pipeline_config_robot.yaml  robosense.yaml  robot_cfg.yaml  rosbag_cfg.yaml  sim_cfg.yaml  teleop_ps4.yaml  theme.yaml  vpr_ekf.yaml
cfg/ref/: control.yaml
cfg/urdf/: accessories.urdf.xacro  cam360.urdf.xacro  jackal  jackal.urdf.xacro
data/: README.md
data/paths/: cpr_office_loop_1.csv
exe/: get_param  linker
launch/: aarapsi.launch  data_collection_jackal.launch  data_matching_jackal.launch  hdl_ekf.launch  hdl_graph_slam.launch  hdl_localization.launch  pcd_view.launch  robot.launch  scout.launch  slam.launch
launch/hdl/: hdl_ekf.launch  hdl_graph_slam.launch  hdl_localization.launch
launch/old/: smooth.launch  vprp_multi_bokeh.launch
launch/sim/: gazebo.launch  model.launch  sim.launch  teleop.launch  view_robot.launch
launch/vpr/: autonomous_control.launch  path_follower.launch  twistandfollow.launch  vpr_cruncher.launch  vpr_initialisation.launch  vpr_monitor.launch  vpr_pipeline.launch  vpr_plotter.launch  vpr_pyplot_monitor.launch  vprp_bokeh.launch  vprp_multi_bokeh.launch  vprp_spin_bokeh.launch
launch/vpr/nodes/: data_fuser.launch  dataset_trainer.launch  img_odom_agg.launch  throttle.launch  (+8 more)
msg/: CompressedImageDetails.msg  CompressedImageLabelStamped.msg  CompressedImageOdom.msg  CompressedMonitorDetails.msg  ControllerState.msg  ControllerStateInfo.msg  ControllerStateInfoGroup.msg  DatasetParams.msg  Debug.msg  ExpResults.msg  GoalExpResults.msg  Heartbeat.msg  ImageDetails.msg  ImageLabelDetails.msg  ImageLabelStamped.msg  ImageOdom.msg  ImageStructure.msg  Label.msg  LabelDetails.msg  LabelFlagged.msg  MonitorDetails.msg  ParamsSVM.msg  PosVel.msg  RequestDataset.msg  RequestResponse.msg  RequestSVM.msg  ResponseDataset.msg  ResponseSVM.msg  RobotDetails.msg  SafetyStates.msg  SpeedCommand.msg  xyw.msg
nodes/: bokeh_launcher.py  data_fuser.py  dataset_trainer.py  follower.py  frame_transformer.py  image_odom_aggregator.py  img_odom_agg.py  labelxyw2posestamped.py  multicam_fusion.py  node2node_driver.py  node_template.py  param_watcher.py  path_follower.py  pose_recorder.py  repeater.py  se_spoofer.py  simple_node_template.py  slam_follower.py  svm_trainer.py  throttle.py  twist2joy.py  visualiser.py  vpr_cruncher.py  vpr_follower.py  vpr_monitor.py  vpr_node_template.py  vpr_plotter.py  xyw2posestamped.py
nodes/bokeh_server/: ajax_node.py  bokeh_launcher.py  main.py
rviz/: hdl_graph_slam.rviz  jackal.rviz  localisation.rviz  pcd_view.rviz  sim_control.rviz  test.rviz  vpr_pipeline.rviz
scripts/: gitpub  gzlauncher  throttle.py
scripts/control/: fitter.py  follower.py  repeater.py  smooth.py
scripts/image_processors/: bag_ripper.py  bag_sampler.py  image_spin.py  multicam_fusion.py  odom_multifeed_processor.py  pos_multifeed_processor.py  pos_singlefeed_processor.py
scripts/lidar/: lidar2pano.py  lidar2pano_demo.py  lidar_path_finder.py  pc2grid.py  pcrotate.py  pcvisualise.py  pointcloudDensityIncrease.py
scripts/testing/: frame_transformer.py  gzlauncher  image_spin.py  netvlad_hybridnet_testing.py  node_template.py  odom2map.py  pose_recorder.py  rosbag_vpr.py  slam_follower.py  test_node.py  test_script.py  test_script_2.py  view_vector.py  vpr_test_node.py
scripts/vpr_simple/: smooth.py  svm_trainer.py  vpr_all_in_one.py  vpr_bokeh_server.py  vpr_cruncher.py  vpr_monitor.py  vpr_plotter.py
servers/bokeh_server/: app_hooks.py  main.html  main.py
src/aarapsi_robot_pack.egg-info/: PKG-INFO  SOURCES.txt
srv/: DoExtraction.srv  GetSafetyStates.srv
(+6 files in other folders)
